update job title

--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
 \entry
 {\href{https://www.gic.com.sg/}{GIC}}
 {
-\role{\emph{Vice President -- Investment Insights Group}}{May 2023 \to now}
+\role{\emph{Core Analyst -- Investment Insights Group}}{May 2023 \to now}
 \begin{itemize}
 \item Developed internal systems to support Private Equity investments and analysis
 \item Implemented chat agents using vector stores and OpenAI APIs to enhance the efficiency of investment managers and extract insights from internal datasets.
